--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/md-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luxury Real Estate React Skeleton</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <title>Missy Dours - Luxury Real Estate in North Texas</title>
+    <meta name="description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas. Specializing in exclusive properties in Highland Park, Preston Hollow, Southlake, and beyond." />
+    <meta property="og:title" content="Missy Dours - Luxury Real Estate in North Texas" />
+    <meta property="og:description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas. Specializing in exclusive properties in Highland Park, Preston Hollow, Southlake, and beyond." />
+    <meta property="og:image" content="/images/md-logo.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Missy Dours - Luxury Real Estate in North Texas" />
+    <meta name="twitter:description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas." />
+    <meta name="twitter:image" content="/images/md-logo.png" />
 </head>
   <body>
     <form name="contact" method="POST" data-netlify="true" hidden>
