--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta name="description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas. Specializing in exclusive properties in Highland Park, Preston Hollow, Southlake, and beyond." />
     <meta property="og:title" content="Missy Dours - Luxury Real Estate in North Texas" />
     <meta property="og:description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas. Specializing in exclusive properties in Highland Park, Preston Hollow, Southlake, and beyond." />
-    <meta property="og:image" content="/images/Missys-OG.PNG" />
+    <meta property="og:image" content="/images/og/Missys-OG.PNG" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Missy Dours - Luxury Real Estate in North Texas" />
     <meta name="twitter:description" content="Premier luxury real estate advisor serving Dallas, Fort Worth, and North Texas." />
-    <meta name="twitter:image" content="/images/Missys-OG.PNG" />
+    <meta name="twitter:image" content="/images/og/Missys-OG.PNG" />
 </head>
   <body>
     <form name="contact" method="POST" data-netlify="true" hidden>
