--- a/public/listings/3105-palmdale-cir.html
+++ b/public/listings/3105-palmdale-cir.html
@@ -10,14 +10,14 @@
 
   <meta property="og:title" content="3105 Palmdale Circle - Luxury Home | Missy Dours">
   <meta property="og:description" content="Stunning luxury home at 3105 Palmdale Circle. Explore this exceptional property with Missy Dours, your trusted Dallas-Fort Worth real estate advisor.">
-  <meta property="og:image" content="https://missydours.com/images/listings/3105-palmdale-cir/3105_Palmdale_Cir01.jpg">
+  <meta property="og:image" content="https://missydours.com/images/listings/3105-palmdale-cir/3105_Palmdale_Cir01.webp">
   <meta property="og:url" content="https://missydours.com/listings/3105-palmdale-cir">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="3105 Palmdale Circle - Luxury Home | Missy Dours">
   <meta name="twitter:description" content="Stunning luxury home at 3105 Palmdale Circle. Explore this exceptional property with Missy Dours, your trusted Dallas-Fort Worth real estate advisor.">
-  <meta name="twitter:image" content="https://missydours.com/images/listings/3105-palmdale-cir/3105_Palmdale_Cir01.jpg">
+  <meta name="twitter:image" content="https://missydours.com/images/listings/3105-palmdale-cir/3105_Palmdale_Cir01.webp">
 </head>
 <body>
   <p>Redirecting to property details...</p>
